--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Mike's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="/resume_2023.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://mikeobr.github.io/resume_2023.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
