--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Mike's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://mikeobr.github.io/resume_2023.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://mikeobr.github.io/files/resume_2023.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
